HelloWorld/force-app/main/default/objects/Keeping__c/Keeping__c.object-meta.xml
<CustomObject>
    <label>Keeping</label>
    <nameField>
        <displayFormat>KID-{000000}</displayFormat>
        <label>Keeping ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Keepings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>