HelloWorld/force-app/main/default/objects/Keeping__c/fields/Dinshaws_members__c.field-meta.xml
<CustomField>
    <fullName>Dinshaws_members__c</fullName>
    <label>Dinshaws members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>