HelloWorld/force-app/main/default/objects/Keeping__c/fields/Haldiram_members__c.field-meta.xml
<CustomField>
    <fullName>Haldiram_members__c</fullName>
    <label>Haldiram members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>