HelloWorld/force-app/main/default/objects/Keeping__c/fields/Top_and_Town__c.field-meta.xml
<CustomField>
    <fullName>Top_and_Town__c</fullName>
    <label>Top and Town</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>