HelloWorld/force-app/main/default/objects/Keeping__c/fields/Visa__c.field-meta.xml
<CustomField>
    <fullName>Visa__c</fullName>
    <label>Visa</label>
    <referenceTo>Visa__c</referenceTo>
    <relationshipLabel>Keepings</relationshipLabel>
    <relationshipName>Keepings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>