HelloWorld/force-app/main/default/objects/Keeping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Visa__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>